# SmoothLife

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  brush.fs  smoothlife.fs  smoothlife_gpu.c
